[iOS] WKWebView should not allow app links to be opened on back or forward navigation https://bugs.webkit.org/show_bug.cgi?id=165502

Reviewed by Dan Bernstein.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::decidePolicyForNavigationAction): Add a condition to shouldOpenAppLinks
(which we use when creating a NavigationAction) that the navigationActionData is not a navigation
of type BackForward. This way, we don't open app links when a navigation is done via back or
forward.


Canonical link: https://commits.webkit.org/183232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209573 268f45cc-cd09-0410-ab3c-d52691b4dbfc